minor spacing fix in footer and cutomer slider section

--- a/resources/scss/footer/index.scss
+++ b/resources/scss/footer/index.scss
@@ -12,13 +12,13 @@ footer {
         flex: 1 1 30%;
 
         .footer-col {
-            padding-bottom: 40px;
+            padding-bottom: 35px;
+            padding-left: 10px;
             .social-links {
                 display: flex;
                 margin: 0 -14px;
                 flex-wrap: wrap;
                 padding-top: 40px;
-                
             }
             .social-links a {
                 transition: 0.5s;
@@ -39,7 +39,7 @@ footer {
             h4 {
                 font-family: "Nunito Sans", sans-serif;
                 @include font(fTitle, 22, 35, regular);
-                padding-bottom: 5px;
+                padding-bottom: 10px;
             }
             p {
                 font-family: "Nunito Sans", sans-serif;
