--- a/resources/scss/header/index.scss
+++ b/resources/scss/header/index.scss
@@ -130,6 +130,9 @@
                 right: 40%;
             }
         }
+        .container {
+            justify-content: space-around;
+        }
     }
 }
 .collapse {
