--- a/resources/scss/home-slider/index.scss
+++ b/resources/scss/home-slider/index.scss
@@ -1,6 +1,9 @@
 @use "../app/links.scss" as *;
 .slider {
-    padding: 0 0 50px;
+    padding: 0 0 35px;
+    .container {
+        padding: 0px 0px 100px 0px;
+    }
     .title {
         padding-bottom: 80px;
         position: relative;
